# Cube

./: .travis.yml  CMakeLists.txt  LICENSE.md  README.md  main.cpp  vertexShader.glsl
cmake/: FindGLFW.cmake  FindGLM.cmake
src/: CMakeLists.txt  camera.cpp  camera.h  cameralight.cpp  cameralight.h  debugcameracallback.cpp  debugcameracallback.h  fbo.cpp  fbo.h  file.cpp  file.h  fragmentShader.glsl  globals.cpp  globals.h  light.cpp  light.h  main.cpp  orbitallight.cpp  orbitallight.h  shader.cpp  shader.h  staticlight.cpp  staticlight.h  vao.cpp  vao.h  vertexShader.glsl
src/shaders/0_fixed-sized-points/: fragmentShader.glsl  vertexShader.glsl
src/shaders/0_fxaa/: fragmentShader.glsl  vertexShader.glsl
src/shaders/1/: vertexShader.glsl
src/shaders/1_fixed-sized-points/: fragmentShader.glsl  vertexShader.glsl
src/shaders/1_square-Sized-corrected/: vertexShader.glsl
src/shaders/2/: fragmentShader.glsl  vertexShader.glsl
src/shaders/2_affinely-projected-point-sprites/: vertexShader.glsl
src/shaders/2_square-Sized-corrected/: fragmentShader.glsl  vertexShader.glsl
src/shaders/3/: fragmentShader.glsl  vertexShader.glsl
src/shaders/3_affinely-projected-point-sprites/: fragmentShader.glsl  vertexShader.glsl
src/shaders/3_perspective-corrected/: fragmentShader.glsl
src/shaders/4/: vertexShader.glsl
src/shaders/4/1visibility/: fragmentShader.glsl  vertexShader.glsl
src/shaders/4/2blending/: vertexShader.glsl
src/shaders/4_light-perspective-corrected/: fragmentShader.glsl  vertexShader.glsl
src/shaders/4_light-perspective-corrected/pass_1_visibility/: fragmentShader.glsl  vertexShader.glsl
src/shaders/4_light-perspective-corrected/pass_2_blending/: fragmentShader.glsl  vertexShader.glsl
src/shaders/4_light-perspective-corrected/pass_3_normalization/: fragmentShader.glsl  vertexShader.glsl
src/shaders/4_perspective-corrected/: fragmentShader.glsl  vertexShader.glsl
src/shaders/4_perspective-corrected/pass_1_visibility/: fragmentShader.glsl  vertexShader.glsl
src/shaders/4_perspective-corrected/pass_2_blending/: deferredFragmentShader.glsl  deferredVertexShader.glsl  deferredvertexShader.glsl  fragmentShader.glsl  gouraudFragmentShader.glsl  gouraudVertexShader.glsl  gouraudvertexShader.glsl  phongFragmentShader.glsl  phongVertexShader.glsl  vertexShader.glsl
src/shaders/4_perspective-corrected/pass_3_normalization/: deferredFragmentShader.glsl  deferredVertexShader.glsl  fragmentShader.glsl  vertexShader.glsl
test/: cow.ply  suzanne.ply  suzanne100k.ply  suzanne30k.ply
test/test_solid/: CMakeLists.txt  test_solid.cpp  vertexShader.glsl
thesis/es/: pfc.brf  pfc.tex  pfc_agradecimientos.tex  pfc_appendix_010.tex  pfc_biblio.bib  pfc_certificado.tex  pfc_dedicatoria.tex  pfc_example.kilepr  pfc_frontmatter_intro.tex  pfc_main_010.tex  pfc_main_020.tex  pfc_main_030.tex  pfc_main_040.tex  pfc_main_050.tex  pfc_main_060.tex  pfc_main_070.tex  pfc_palabras_clave.tex  pfc_portada.tex  pfc_resumen.tex
thesis/figures/: camara_estenoscopica.eps  epsilondepth.eps  gantt_part1.eps  gantt_part2.eps  gouraud-pipeline.eps  integracion-transistores.eps  matriz_p.eps  orto_and_perspect.eps  perspective-correct.eps  phong.eps  pipeline.eps  splat.eps  surfel.eps
tools/: cubeGraphGen.py  log.txt
